--- a/detailProdLogin.html
+++ b/detailProdLogin.html
@@ -60,13 +60,8 @@
                         </ul>
 
                         <form class="form-inline my-2 my-lg-0">
-
-                              <a target="_blank" href="loginn.html">
-                                    <button class="btn my-2 my-sm-0 btnn" type="button">Login</button>
-                              </a>
-
-                              <a target="_blank" href="registerr.html">
-                                    <button class="btn my-2 my-sm-0 btnn" type="button">Register</button>
+                              <a><ion-icon  class="logoLogin" name="person"></ion-icon></a>
+                              <a class="profil" href="profil.html" target="_blank">Andrew
                               </a>
                         </form>
                   </div>
@@ -218,7 +213,7 @@
 
                               <div class="row" style="margin-top: 40px; margin-bottom: 40px;">
                                     <div class="col-lg-9">
-                                          <a target="_blank" href="loginn.html">
+                                          <a target="_blank" href="payment.html">
                                                 <button class="btn btn-danger my-2 my-sm-0 btn11" type="button">Add To
                                                       Cart</button>
                                           </a>
